--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,6 +2,8 @@
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*.env.deploy.*
 
 # Dependency directory
 node_modules
@@ -15,3 +17,5 @@ node_modules
 dist
 .env
 .env.deploy
+
+build
