--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,3 +24,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.env
+.env.*
+!.env.example
+!.env.production
+!.env.deploy
+
+node_modules
+build
+dist
+yarn-error.log*.env.deploy.*
