--- a/infra/mesto-frontend.conf
+++ b/infra/mesto-frontend.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name front.nomorepartiessbs.ru;
+    server_name nomorepartiessbs.ru;
 
 location / {
         proxy_pass http://127.0.0.1:8081;
