--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 REACT_APP_API_URL=api.nomorepartiessbs.ru
 JWT_SECRET=devMdwXkNxw!mCX,J*hbb&!hq[xoFTnzfeLYbzmxVcvmb!lcn]
 CORS_ORIGIN=https://front.nomorepartiessbs.ru
+NODE_ENV=production
+PORT=4000
+CORS_ORIGIN=https://front.nomorepartiessbs.ru
 
 POSTGRES_HOST=database
 POSTGRES_DB=mesto
