--- a/.env.deploy.example
+++ b/.env.deploy.example
@@ -1,7 +1,7 @@
 DEPLOY_USER=user
 DEPLOY_HOST=158.160.204.77
 
-DEPLOY_REPO=git@github.com:shcherbanich/nodejs-pm2-deploy.git
+DEPLOY_REPO=https://github.com/shcherbanich/nodejs-pm2-deploy.git
 DEPLOY_BRANCH=main
 
 SSH_KEY_PATH=~/.ssh/ya/yandex
