--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.3",
+    "@types/pg": "^8.15.5",
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "dotenv": "^17.2.3",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -34,7 +36,6 @@
     "celebrate": "^12.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.16.3",
