--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "browserslist": "^4.26.3",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "typescript": "^4.9.5"
   }
 }
