--- a/infra/mesto-backend.conf
+++ b/infra/mesto-backend.conf
@@ -1,5 +1,4 @@
 server {
-    listen 80;
     server_name api.nomorepartiessbs.ru;
 
     location / {
@@ -10,4 +9,20 @@ server {
         proxy_http_version 1.1;
         proxy_pass http://127.0.0.1:4000;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/front.nomorepartiessbs.ru/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/front.nomorepartiessbs.ru/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = api.nomorepartiessbs.ru) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80;
+    server_name api.nomorepartiessbs.ru;
+    return 404; # managed by Certbot
 }
