--- a/infra/mesto-frontend.conf
+++ b/infra/mesto-frontend.conf
@@ -1,5 +1,4 @@
 server {
-    listen 80;
     server_name front.nomorepartiessbs.ru;
 
     root /var/www/mesto-app/current/frontend/build;
@@ -8,4 +7,21 @@ server {
     location / {
         try_files $uri /index.html;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/front.nomorepartiessbs.ru/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/front.nomorepartiessbs.ru/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = front.nomorepartiessbs.ru) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name front.nomorepartiessbs.ru;
+    return 404; # managed by Certbot
 }
