--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
     "pg": "^8.16.3",
-    "validator": "^13.0.0"
+    "validator": "^13.15.15"
   }
 }
