--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 REACT_APP_API_URL=api.nomorepartiessbs.ru
 JWT_SECRET=devMdwXkNxw!mCX,J*hbb&!hq[xoFTnzfeLYbzmxVcvmb!lcn]
 CORS_ORIGIN=https://front.nomorepartiessbs.ru
+REACT_APP_API_BASE=https://api.nomorepartiessbs.ru
 NODE_ENV=production
 PORT=4000
 
