--- a/.env.deploy.example
+++ b/.env.deploy.example
@@ -8,3 +8,4 @@ SSH_KEY_PATH=~/.ssh/ya/yandex
 
 FRONT_DOMAIN=front.nomorepartiessbs.ru
 BACK_DOMAIN=api.nomorepartiessbs.ru
+REACT_APP_API_BASE=https://api.nomorepartiessbs.ru
